--- a/web/fragments/chat.html
+++ b/web/fragments/chat.html
@@ -9,7 +9,7 @@
 <body>
     <div class="window">
         <div class="window-header">
-            <div class="window-title">chat n°1</div>
+            <div class="window-title">chat n°0</div>
             <div class="window-buttons">
                 <div class="window-button window-minimize">_</div>
                 <div class="window-button window-maximize">[]</div>
@@ -47,14 +47,14 @@
 
 @font-face {
     font-family: 'main';
-    src: url('fonts/Cascadia.ttf') format('truetype');
+    src: url('fonts/CascadiaCode.ttf') format('truetype');
 }
 
 body {
     margin: 0;
     padding: 10px;
     background-color: #111;
-    font-family: 'main';
+    font-family: 'main', sans-serif;
 }
 
 .window {
@@ -77,7 +77,6 @@ body {
 }
 .window-title {
     padding: 0 5px;
-    font-family: mon;
 }
 .window-buttons {
     display: flex;
@@ -101,6 +100,9 @@ body {
     flex: 1;
     padding: 5px;
     color: var(--text-primary);
+}
+.chat-message-content {
+    font-weight: 100;
 }
 .chat-footer {
     display: flex;
