--- a/web/style.css
+++ b/web/style.css
@@ -1,6 +1,12 @@
 /*instaces*/
 :root{
     --border-glow : rgb(59, 40, 168);
+    --primary: rgb(51, 51, 51);
+    --secondary: rgb(57, 57, 57);
+    --glow: rgba(108, 69, 206, 0.5);
+
+    --text-primary: rgb(210, 210, 210);
+    --text-secondary: rgb(110, 110, 110);
 }
 @font-face {
 	font-family: 'main';
