reformattage des fragments

--- a/web/fragments/button.html
+++ b/web/fragments/button.html
@@ -1,3 +1,8 @@
+<!--
+Bouton
+    - link : lien de l'icone
+-->
+
 <div class="button-icon" id="button-open-terminal">
     <img src="{{link}}" class="button-icon-img small-button button-hover">
 </div>
