--- a/web/fragments/nav.html
+++ b/web/fragments/nav.html
@@ -1,3 +1,8 @@
+<!--
+Section de sélection des salons
+    - content : liste des salons (éléments html)
+-->
+
 <nav id="nav">
     <div id="nav-selection">
         <div id="nav-selection-cross">
@@ -11,9 +16,7 @@
         </div>
     </div>
 
-    <div id="nav-social">
-        <!-- socials containers -->
-    </div>
+    <div id="nav-social">{{content}}</div>
 </nav>
 <style>
 #nav-selection{
