--- a/web/fragments/window_minimised.html
+++ b/web/fragments/window_minimised.html
@@ -1,3 +1,7 @@
+<!--
+Fenêtre minimisée
+-->
+
 <div class="window window-minimized">
     <div class="window-title" onclick="window_retrieve(this)"></div>
     <div class="window-button window-close" onclick="window_close(this)">X</div>
