--- a/web/fragments/login.html
+++ b/web/fragments/login.html
@@ -1,3 +1,7 @@
+<!--
+Interface de connexion
+-->
+
 <div class="login">
     <div class="login-title">Login</div>
     <form class="login-form" action="login.php" method="post">
