--- a/web/styles/terminal.css
+++ b/web/styles/terminal.css
@@ -7,16 +7,20 @@
     flex-direction: column;
     margin: 5px;
     padding: 10px;
-    height: 100%;
-    background-color: var(--dark-secondary);
+    background-color: var(--dark);
     border-radius: 6px;
+    height: calc(100% - 51px);
 }
 
 .terminal-body {
     flex-grow: 1;
-    overflow: auto;
-    min-height: 0;
     margin-bottom: 10px;
+    padding: 5px;
+    color: var(--dark);
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .terminal-body-container {
