progression style terminal

--- a/web/style.css
+++ b/web/style.css
@@ -4,6 +4,7 @@
 @import url('./styles/message.css');
 @import url('./styles/nav.css');
 @import url('./styles/social_container.css');
+@import url('./styles/terminal.css');
 @import url('./styles/window_minimised.css');
 @import url('./styles/window.css');
 
