--- a/web/styles/terminal.css
+++ b/web/styles/terminal.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     margin: 5px;
     padding: 10px;
-    background-color: var(--dark);
+    background-color: var(--dark-secondary);
     border-radius: 6px;
     height: calc(100% - 51px);
 }
@@ -16,7 +16,7 @@
     flex-grow: 1;
     margin-bottom: 10px;
     padding: 5px;
-    color: var(--dark);
+    color: var(--primary);
     overflow-y: auto;
     display: flex;
     flex-direction: column;
@@ -41,7 +41,7 @@
     display: flex;
     padding: 5px;
     background-color: var(--dark-secondary);
-    border: 2px solid var(--border);
+    border: 2px solid var(--border-glow);
     filter: drop-shadow(0 0 5px var(--glow));
     border-radius: 12px;
 }
@@ -55,7 +55,6 @@
 
 .terminal-send {
     margin: 0 5px;
-    background-color: var(--border-glow);
     background-color: var(--border-glow);
     border-radius: 12px;
     padding: 3px 7px;
