--- a/web/fragments/chat.html
+++ b/web/fragments/chat.html
@@ -3,7 +3,7 @@ Contenu de la fenêtre de chat
     - messages : liste des messages (éléments html)
 -->
 
-<div class="chat">
+<div class="chat" id="{{id}}">
     <div class="chat-body">
         <!-- Besoin du container sinon ça fait bugger la taille du chat -->
         <div class="chat-body-container">{{messages}}</div>
