--- a/web/fragments/command.html
+++ b/web/fragments/command.html
@@ -3,7 +3,7 @@ message renvoyé par le terminal
     - content : contenu de la réponse du terminal (texte ou html)
 -->
 
-<div class="chat-message">
+<div class="chat-message" id="{{id}}">
     <div class="chat-message-body">
         <div class="chat-message-username">CD0s_</div>
         <div class="chat-message-content command-result">{{content}}</div>
