--- a/web/fragments/message.html
+++ b/web/fragments/message.html
@@ -5,7 +5,7 @@ Message contenu dans un salon
     - content : contenu du message (texte ou html)
 -->
 
-<div class="chat-message">
+<div class="chat-message" id="{{id}}">
     <div class="chat-message-profile"><img src="{{pp_link}}"></div>
     <div class="chat-message-body">
         <div class="chat-message-username">{{username}}</div>
