--- a/web/fragments/nav.html
+++ b/web/fragments/nav.html
@@ -3,7 +3,7 @@ Section de sélection des salons
     - content : liste des salons (éléments html)
 -->
 
-<nav id="nav">
+<nav id="{{id}}">
     <div id="nav-selection">
         <div id="nav-selection-cross">
             <div class="hide-arrow button-bordered button-hover">
