--- a/web/fragments/terminal.html
+++ b/web/fragments/terminal.html
@@ -3,7 +3,7 @@ Contenu de la fenêtre du terminal
     - content : lignes du terminal (éléments html)
 -->
 
-<div class="terminal">
+<div class="terminal" id="{{id}}">
     <div class="terminal-body">
         <!-- Besoin du container sinon ça fait bugger la taille du terminal -->
         <div class="terminal-body-container">{{content}}</div>
