--- a/web/fragments/button.html
+++ b/web/fragments/button.html
@@ -3,6 +3,6 @@ Bouton
     - link : lien de l'icone
 -->
 
-<div class="button-icon" id="button-open-terminal" onclick="{{action}}">
+<div class="button-icon" id="{{id}}" onclick="{{action}}">
     <img src="{{link}}" class="button-icon-img small-button button-hover">
 </div>
