--- a/web/fragments/login.html
+++ b/web/fragments/login.html
@@ -2,7 +2,7 @@
 Interface de connexion
 -->
 
-<div class="login">
+<div class="login" id="{{id}}">
     <div class="login-title">Login</div>
     <form class="login-form" action="login.php" method="post">
         <label for="username">Email or Username</label>
