patch html/css window

--- a/web/fragments/window.html
+++ b/web/fragments/window.html
@@ -13,5 +13,7 @@ Fenêtre pouvant contenir des interfaces
             <div class="window-button window-close" onclick="window_close(this)">X</div>
         </div>
     </div>
-    {{content}}
+    <div class="window-content">
+        {{content}}
+    </div>
 </div>
