--- a/web/fragments/window_minimised.html
+++ b/web/fragments/window_minimised.html
@@ -1,8 +1,13 @@
 <!--
 Fenêtre minimisée
+    - title : titre de la fenêtre
+    - content : corps caché de la fenêtre (éléments html)
 -->
 
 <div class="window window-minimized" id="{{id}}">
     <div class="window-title" onclick="window_retrieve(this)"></div>
     <div class="window-button window-close" onclick="window_close(this)">X</div>
+    <div class="window-content">
+        {{content}}
+    </div>
 </div>
