--- a/web/fragments/social_container.html
+++ b/web/fragments/social_container.html
@@ -6,7 +6,7 @@ Elément de la liste des salons
     - status_text : texte du status
 -->
 
-<div class="social-container" id="{{id}}" onclick="open_chat(this, '{{name}}')">
+<div class="social-container" id="{{id}}">
     <div class="pp-container">
         <img src="{{pp_link}}">
     </div>
