--- a/web/styles/window.css
+++ b/web/styles/window.css
@@ -1,6 +1,9 @@
 /*
  * Styles pour le fragment 'window_minimised'
  */
+.window-content{
+    height: 100%;
+}
 
 .window.window-visible {
     left: 500px;
