--- a/web/styles/nav.css
+++ b/web/styles/nav.css
@@ -4,6 +4,8 @@
 
 nav{
     width: 20%;
+    min-width: 150px;
+    max-width: 350px;
     height: 100%;
     background-color: var(--dark-secondary);
     display: flex;
