nettoyage des restes anciennes window

--- a/web/fragments/window.html
+++ b/web/fragments/window.html
@@ -6,11 +6,11 @@ Fenêtre pouvant contenir des interfaces
 
 <div class="window window-visible" id="{{id}}">
     <div class="window-header">
-        <div class="window-title" onmousedown="window_drag(event,this)">{{title}}</div>
+        <div class="window-title">{{title}}</div>
         <div class="window-buttons">
-            <div class="window-button window-minimize" onclick="window_minimize(this)">_</div>
-            <div class="window-button window-maximize" onclick="window_maximize(this)">[]</div>
-            <div class="window-button window-close" onclick="window_close(this)">X</div>
+            <div class="window-button window-minimize">_</div>
+            <div class="window-button window-maximize">[]</div>
+            <div class="window-button window-close">X</div>
         </div>
     </div>
     <div class="window-content">
