--- a/web/fragments/button.html
+++ b/web/fragments/button.html
@@ -3,6 +3,6 @@ Bouton
     - link : lien de l'icone
 -->
 
-<div class="button-icon" id="{{id}}" onclick="{{action}}" style="height: {{size}};">
+<div class="button-icon" id="{{id}}" style="height: {{size}};">
     <img src="{{link}}" class="button-icon-img small-button button-hover">
 </div>
