--- a/web/style.css
+++ b/web/style.css
@@ -7,6 +7,7 @@
 @import url('./styles/terminal.css');
 @import url('./styles/window_minimized.css');
 @import url('./styles/window.css');
+@import url('./styles/drop_down_menu.css');
 
 
 /*instaces*/
