--- a/web/styles/button.css
+++ b/web/styles/button.css
@@ -12,13 +12,10 @@
 
 .button-icon-img{
     height: 100%;
-}
-
-.small-button{
-    width: 70%;
-    height: fit-content;
-    filter: drop-shadow(0 0 15px var(--border-glow));
-    filter: hue-rotate(var(--hue));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .button-bordered{
@@ -31,4 +28,18 @@
     filter: brightness(1.2);
     filter: drop-shadow(0 0 10px rgba(255, 208, 0, 0.2));
     transition: 0.2s;
+}
+
+.button-text{
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-text-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
