ajout classe Window

--- a/web/fragments/window.html
+++ b/web/fragments/window.html
@@ -4,7 +4,7 @@ Fenêtre pouvant contenir des interfaces
     - content : corps de la fenêtre (éléments html)
 -->
 
-<div class="window window-visible" id="{{id}}">
+<div class="window window-visible" id="{{id}}" style="left: 0; top: 0;">
     <div class="window-header">
         <div class="window-title">{{title}}</div>
         <div class="window-buttons">
