--- a/web/fragments/window_minimized.html
+++ b/web/fragments/window_minimized.html
@@ -1,13 +1,9 @@
 <!--
 Fenêtre minimisée
     - title : titre de la fenêtre
-    - content : corps caché de la fenêtre (éléments html)
 -->
 
 <div class="window window-minimized" id="{{id}}">
-    <div class="window-title" onclick="window_retrieve(this)"></div>
-    <div class="window-button window-close" onclick="window_close(this)">X</div>
-    <div class="window-content">
-        {{content}}
-    </div>
+    <div class="window-title">{{title}}</div>
+    <div class="window-button window-close">X</div>
 </div>
