--- a/web/fragments/command.html
+++ b/web/fragments/command.html
@@ -6,6 +6,6 @@ message renvoyé par le terminal
 <div class="chat-message" id="{{id}}">
     <div class="chat-message-body">
         <div class="chat-message-username">CD0s_</div>
-        <div class="chat-message-content command-result">{{content}}</div>
+        <div class="chat-message-content command-result" id="{{id}}-content"><!-- content --></div>
     </div>
 </div>
