--- a/web/fragments/drop_down_menu.html
+++ b/web/fragments/drop_down_menu.html
@@ -1,3 +1,5 @@
     <div class="drop-down-menu" id="{{id}}">
-    {{content}}
+        <div id="{{id}}-content">
+            <!-- content -->
+        </div>
     </div>
