--- a/web/fragments/nav.html
+++ b/web/fragments/nav.html
@@ -16,5 +16,5 @@ Section de sélection des salons
         </div>
     </div>
 
-    <div id="nav-social">{{content}}</div>
+    <div class="nav-social" id="{{id}}-content"><!-- content --></div>
 </nav>
