--- a/web/fragments/window.html
+++ b/web/fragments/window.html
@@ -13,7 +13,7 @@ Fenêtre pouvant contenir des interfaces
             <div class="window-button window-close">X</div>
         </div>
     </div>
-    <div class="window-content">
-        {{content}}
+    <div class="window-content" id="{{id}}-content">
+        <!-- content -->
     </div>
 </div>
