--- a/web/fragments/chat.html
+++ b/web/fragments/chat.html
@@ -9,7 +9,7 @@ Contenu de la fenêtre de chat
         <div class="chat-body-container" id="{{id}}-content"></div>
     </div>
     <div class="chat-footer">
-        <input type="text" class="chat-input" placeholder="Ecrivez un message..." autocomplete="off">
+        <span class="chat-input" role="textbox" contenteditable></span>
         <div class="chat-send">Envoyer</div>
     </div>
 </div>
