--- a/web/styles/message.css
+++ b/web/styles/message.css
@@ -19,6 +19,7 @@
 .chat-message-username {
     color: #ff007b;
     font-weight: 500;
+    font-size: 0.9em;
 }
 
 .chat-message-username::after {
@@ -27,6 +28,12 @@
 
 .chat-message-content {
     font-weight: 100;
+    width: 100%;
+    color: var(--text-primary);
+    overflow-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
+    font-size: 0.8em;
     color: var(--text-primary);
 }
 
