--- a/web/styles/window.css
+++ b/web/styles/window.css
@@ -3,6 +3,11 @@
  */
 .window-content{
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
 }
 
 .window.window-visible {
