pas fini mais vasi flemme

--- a/web/fragments/drop_down_menu.html
+++ b/web/fragments/drop_down_menu.html
@@ -1,5 +1,5 @@
     <div class="drop-down-menu" id="{{id}}">
-        <div id="{{id}}-content">
+        <div id="{{id}}-content" class="drop-down-menu-content">
             <!-- content -->
         </div>
     </div>
