--- a/web/fragments/image_button.html
+++ b/web/fragments/image_button.html
@@ -3,6 +3,6 @@ Bouton
     - link : lien de l'icone
 -->
 
-<div class="button image-button button-icon" id="{{id}}" style="height: {{size}};">
+<div class="button image-button button-icon" id="{{id}}" style="{{style}}">
     <img src="{{link_appearance}}" class="button-icon-img button-hover">
 </div>
