--- a/web/fragments/login.html
+++ b/web/fragments/login.html
@@ -9,6 +9,6 @@ Interface de connexion
         <input type="text" class="login-field" name="username" placeholder="Username" required>
         <label for="password">Password</label>
         <input type="password" class="login-field" name="password" placeholder="Password" required>
-        <input type="submit" class="login-submit" value="Login">
+        <input type="submit" class="login-submit" value="Login" id="login">
     </form>
 </div>
