--- a/web/styles/drop_down_menu.css
+++ b/web/styles/drop_down_menu.css
@@ -4,18 +4,27 @@
     position: absolute;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 20px;
     background-color: var(--primary);
     opacity: 0.8;
     border-radius: 15px;
     height: min-content;
-    gap: 10px;
 }
 
 .drop-down-menu .button::after{
     content: "";
     height: 2px;
-    background: linear-gradient(90deg,rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.15) 100%);
+    background: linear-gradient(90deg,rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.30) 50%, rgba(255, 255, 255, 0.15) 100%);
     margin-top: 5px;
     width: 100%;
+}
+
+.drop-down-menu-content{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    height: min-content;
+    align-items: flex-start;
 }
